--- a/src/2.信息的表示和处理.md
+++ b/src/2.信息的表示和处理.md
@@ -50,3 +50,36 @@
 
 > 移位运算的优先级比`+ -`运算低
 
+
+
+## 整数表示
+- 无符号数编码定义:\\(B2U_w(\overline x)=\sum_{i=0}^{w-1}x_i2^i\\)
+
+- 补码编码定义:把无符号数的最高位变成符号位:即最高位的符号是`-`,其余位不变
+
+处理同样字长的有符号数和无符号数之间的转换:数值可能改变，但位模式不变.
+
+### 补码与无符号数的转换:
+
+- T2U
+
+    ![image-20230425174840570](https://raw.githubusercontent.com/Jiewyjson/P/main/md/v1/202304251748098.png)
+
+- U2T
+
+    ![image-20230425174913777](https://raw.githubusercontent.com/Jiewyjson/P/main/md/v1/202304251749508.png)
+
+    > 一个运算中,如果一个运算数是有符号的，另一个数无符号的，`c`会隐式将无符号数转为有符号数，并且假设两个数都是非负的.
+
+### 扩展位表示
+
+- 无符号数的零扩展
+- 补码数的符号扩展
+
+### 截断
+
+- 无符号数的截断
+- 补码数的截断
+
+### 运算
+
