--- a/src/命令.md
+++ b/src/命令.md
@@ -1,6 +1,8 @@
 # 常用命令
 
-## ls ——列出文件和目录
+## 文件命令
+
+### ls ——列出文件和目录
 
 1. ls 显示当前目录下的文件和目录
 2. ls -F 区分文件和目录
@@ -10,12 +12,12 @@
 6. ls -ld filename 查看单个文件的长列表
 7. 标准通配符(? or *)进行模糊匹配
 
-## 处理文件
+### 处理文件
 
 1. touch filename 创建一个名叫<filename>的**空**文件
 2. cp source destination 把源文件复制到目标对象（当`source` 和`destinayion` 都是文件名是，会将源文件复制成一个新的目标文件，且命名为`destination` ）在目标文件的尾部加上”/”. cp -R 会把整个源文件的所有文件都复制到目标文件中
 
-## 链接文件
+### 链接文件
 
 1. 符号链接
 
@@ -28,4 +30,50 @@
 
 **硬链接只能对同一存储设备的文件建立链接，软连接则可以在不同设备的文件之间建立链接。**
 
-## 重命名文件
+### 重命名文件
+
+> 又叫**移动文件**。
+
+`mv`可以将文件从一个地方移动到另一个地方,并且不改变文件的`inode`编号和时间戳
+
+可搭配`-i` 选项，在试图覆盖已有文件时发出询问.
+
+删除文件
+
+`rm`,可以搭配`-i` 进行询问;`-f` 强制删除.
+
+
+
+创建目录
+
+`mkdir`
+
+> 批量创建:`mkdir -p`
+
+
+
+删除目录
+
+`rmdir`
+
+> 默认情况下,`rmdir` 是删除空目录.但是可以使用`rm -rf`:`-r` 可以向下进入删除目录中的文件并且删除自身,`-f` :强制删除.
+
+
+
+### 查看文件类型
+
+`file` :可以探测文件的内部并且返回文件类型
+
+### 查看整个文件
+
+- cat:查看文本内容;选项：`-n` 加上行号
+- more:显示文本文件的内容,并且会在每页数据显示完之后暂停.
+- less:`more`的升级版，附加的功能:
+    - 可以识别上下箭头和上下翻页键
+
+### 查看部分文件
+
+- tail:默认情况下显示文本的末尾10行；可配合`-n` +数字来显示文本的最后几行。`-f`允许在其他进程使用此文件时查看文件内容。
+- head:默认情况下显示文本的前10行；同理可以配合`-n`
+
+### 
