--- a/src/2.信息的表示和处理.md
+++ b/src/2.信息的表示和处理.md
@@ -83,3 +83,53 @@
 
 ### 运算
 
+#### 整数
+
+- 加法
+    - 无符号加法
+        - 正常 `x+y`
+        - 正溢出 `x+y-(1<<w)`
+    - 补码加法
+        - 正溢出 `x+y-(1<<w)`
+        - 正常 `x+y`
+        - 负溢出 `x+y+(1<<w)`
+
+> 检测无符号溢出:如果x+y的结果s<x||s<y
+>
+> 检测补码溢出:
+>
+> ​	1.正溢出,x>0,y>0但x+y的结果s<=0; 
+>
+> ​	2.负溢出:x<0,y<0但s>=0。
+
+
+
+> 计算位级补码的非表示
+>
+> 一: 对每一位求补,再对结果+1
+>
+> 二: 设存在一位k(k是下标),k是最右边`1` 的位置,对k左边的所有位取反.
+
+
+
+- 乘法
+    - 无符号乘法: `(x*y)mod (1<<w)`
+    - 补码乘法:
+        - 首先跟无符号乘法一样先取模,然后计算无符号转换补码
+
+> 2的幂:
+>
+> ​	`1<<k`: 表示`* 2的k次幂 `
+>
+> ​	`1>>k`: 表示`/ 2的k次幂`
+
+无符号运算和补码运算乘以2的幂都可能会溢出，但是即便溢出，通过移位得到的结果是一样的。如`11` 的二进制4位`[1011]`,`11<<2=44`,即`[101100]`截断为4位`[1100]`十进制为`12`==`44 mod 16`
+
+
+
+
+
+
+
+#### 浮点数
+
