--- a/src/2.信息的表示和处理.md
+++ b/src/2.信息的表示和处理.md
@@ -131,3 +131,37 @@
 
 ## 浮点数
 
+### 定点表示
+
+> 每个十进制小数可以根据小数点的位置，分割成左右两部分。左边的数字用`10`的正幂表示，右边则是负幂。
+
+> 二进制小数的表示也是类似的
+
+但在有限长度编码里面，十进制不能准确表示无限小数，同理有些小数在二进制表示里面只能取到近似值。
+
+
+
+### IEEE 浮点表示
+
+> `IEEE` 标准使用`V=(-1)^s * M * 2^E`的形式表示一个数
+
+- 符号（sign） `s` 决定`v`的正负
+- 尾数`M` 是一个二进制小数
+- 阶码 `E` 对浮点数加权
+    - 单独的符号位`s`
+    - `k`位的阶码字段`exp`
+    - `n`位小数字段`frac`
+
+>  规格化:`exp` 的位模式不全为`0` 也不全为`1`。阶码值:`E=e-Bias`,尾数定义为`M=1+f`,`f` 为小数字段`frac`描述的小数值
+
+> 非规格化:阶码域全为`0`.阶码值`E=1-Bias`,尾数值`M=f`
+
+> 特殊值：- 无穷大 - `NaN` (Not a Number)
+
+### 浮点运算
+
+- 浮点加法不可结合
+- 浮点加法满足单调性
+- 浮点乘法可交换
+- 浮点乘法不可结合
+- 浮点乘法不具备分配性
